# selfproxy

./: .gitignore  .pdm-python  README.md  Surge.conf  aSmartSurge.conf  mysurge.conf  pyproject.toml  smartSurge.conf
.github/workflows/: reusable-mihomo-update.yml  update_mihomo.yml  update_mihomo_all.yml  update_mihomo_config.yml  update_mihomo_script.yml  validate_mihomo_updater.yml
Clash Meta/: Clash_Mihomo.yaml  README.md
Mihomo/: Clash_Mihomo.yaml  Mihomo.yaml  README.md  mihomo_multi.yaml  mihomo_single.yaml
Mihomo/Extension_Script/: README.md  auto_update.py  script.js
Mihomo/Mihomo_Party/: README.md  auto_update.py  party.js
Mihomo/auto_update_config/: auto.py  auto_update_js.py  auto_update_yaml.py
Mihomo/auto_update_config/mihomo_updater/: cli.py  constants.py  errors.py  fetch.py  io.py  markers.py  renderers.py  updater.py
Mihomo/auto_update_config/tests/: test_cli.py  test_fetch.py  test_markers.py  test_renderers.py  test_repo_layout.py  test_updater.py
Sing-Box/: README.md  singbox.json  singbox_realip.json  singbox_realip_myrule.json  singbox_realip_myrule_subscribe.json  tmp.js  tmppp.js  tp.js
Surge/: README.md  Surge-Mac.conf  Surge-iOS.conf  Surge.conf
